<?xml version="1.0"?>
<package>
  <name>robot_navigation_state</name>
  <version>1.0.0</version>
  <description>The robot_navigation_state package</description>

  <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/pluto_apps/robot_navigation_state</url>

  <author email="spuetz@uos.de">Sebastian Pütz</author>

  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
